Update OpenAPI documentation for parameters and schemas
- Changed `languageId` parameter to be required for dictionary search, enhancing clarity in API usage.
- Refactored schema properties to use snake_case for consistency, including `source_language_id`, `target_language_id`, and others.
- Improved descriptions for several schema fields to provide better context for API consumers.

This commit enhances the OpenAPI documentation, ensuring better adherence to naming conventions and improving the overall clarity of the API specifications.

--- a/backend/docs/openapi/components/parameters.yaml
+++ b/backend/docs/openapi/components/parameters.yaml
@@ -50,8 +50,8 @@ components:
     LanguageId:
       name: languageId
       in: query
-      required: false
-      description: Language ID to filter results
+      required: true
+      description: Language ID to filter results (required for dictionary search)
       schema:
         type: integer
         format: int32
