Rename project from "English Coach" to "Language Coach" across the application
- Updated application logs, configuration files, and environment variables to reflect the new project name.
- Modified API documentation, Postman collections, and frontend components to ensure consistent branding.
- Adjusted Docker Compose settings and scripts to align with the new naming convention.

This commit enhances brand identity and ensures uniformity throughout the codebase and documentation.

--- a/backend/configs/config.production.yaml
+++ b/backend/configs/config.production.yaml
@@ -1,6 +1,6 @@
 app:
   env: production
-  name: english-coach
+  name: language-coach
 
 server:
   port: 8080
@@ -30,6 +30,6 @@ logging:
 
 cors:
   allowed_origins:
-    - https://english-coach.example.com
+    - https://language-coach.example.com
 
 
