--- a/backend/configs/config.staging.yaml
+++ b/backend/configs/config.staging.yaml
@@ -1,6 +1,6 @@
 app:
   env: staging
-  name: english-coach-staging
+  name: language-coach-staging
 
 server:
   port: 8080
@@ -30,6 +30,6 @@ logging:
 
 cors:
   allowed_origins:
-    - https://staging.english-coach.example.com
+    - https://staging.language-coach.example.com
 
 
