Refactor Docker Compose and frontend Dockerfile for improved environment configuration
- Removed outdated comments and clarified the Docker Compose file for better understanding of development and production setups.
- Updated the frontend Dockerfile to accept an ENV argument for dynamic environment file selection, enhancing build flexibility.
- Streamlined volume mounts in the Docker Compose file to reflect changes in development practices.

This commit enhances the clarity and maintainability of the deployment configuration.

--- a/deploy/compose/docker-compose.yml
+++ b/deploy/compose/docker-compose.yml
@@ -1,16 +1,3 @@
-# Docker Compose file for Language Coach application
-# Uses variable substitution for environment-specific configuration
-# 
-# For Development:
-#   ENV=dev docker compose --profile dev up -d
-#
-# For Production:
-#   ENV=prod docker compose --profile prod up -d
-#
-# The file automatically selects the correct Dockerfile and env files based on ENV:
-# - ENV=dev → Dockerfile.dev (with volumes for live reload)
-# - ENV=prod → Dockerfile.prod (without volumes, code baked into image)
-
 services:
   postgres:
     image: postgres:18.1-alpine
@@ -56,8 +43,6 @@ services:
     env_file:
       - ../env/${ENV:-dev}/backend.env
     volumes:
-      # Mount backend source code for live reload in dev only
-      # In production (Dockerfile.prod), volumes are not used (code is baked into image)
       - ../../backend:/app
     depends_on:
       postgres:
@@ -74,17 +59,13 @@ services:
       context: ../..
       dockerfile: deploy/docker/frontend/Dockerfile.${ENV:-dev}
       args:
-        # Pass VITE_API_BASE_URL as build arg for production build
-        # This is read from the environment variable set before running docker compose
-        VITE_API_BASE_URL: ${VITE_API_BASE_URL:-}
+        ENV: ${ENV:-dev}
     container_name: language-coach-frontend
     ports:
       - "5173:5173"
     env_file:
       - ../env/${ENV:-dev}/frontend.env
     volumes:
-      # Mount source code for HMR (Hot Module Replacement) in dev only
-      # In production (Dockerfile.prod), volumes are not used (code is baked into image)
       - ../../frontend/src:/app/src
       - ../../frontend/public:/app/public
     depends_on:
