Rename project from "Language Coach" to "LexiGo" across the application
- Updated README, API logs, configuration files, and environment variables to reflect the new project name.
- Modified API documentation, Postman collections, and frontend components for consistent branding.
- Adjusted Docker Compose settings and scripts to align with the new naming convention.

This commit enhances brand identity and ensures uniformity throughout the codebase and documentation.

--- a/backend/configs/config.development.yaml
+++ b/backend/configs/config.development.yaml
@@ -1,6 +1,6 @@
 app:
   env: development
-  name: language-coach-dev
+  name: lexigo-dev
 
 server:
   port: 8080
@@ -14,7 +14,7 @@ database:
   port: 5432
   user: postgres
   password: postgres
-  database: language_coach_dev
+  database: lexigo_dev
   sslmode: disable
   max_conns: 10
   min_conns: 2
