--- a/deploy/env/example/backend.env
+++ b/deploy/env/example/backend.env
@@ -26,7 +26,7 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 # Database password (change in production!)
 
-DB_NAME=language_coach
+DB_NAME=lexigo
 # Database name
 
 DB_SSLMODE=disable
