--- a/deploy/compose/docker-compose.yml
+++ b/deploy/compose/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
   postgres:
     image: postgres:18.1-alpine
-    container_name: lexigo-postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: lexigo
     ports:
-      - "5500:5432"
+      # Dev: 5500, Prod: 5501
+      - "${POSTGRES_PORT:-5500}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -17,12 +17,14 @@ services:
       retries: 5
     networks:
       - lexigo-network
+    profiles:
+      - ${ENV:-dev}
 
   redis:
     image: redis:8.4-alpine
-    container_name: lexigo-redis
     ports:
-      - "6379:6379"
+      # Dev: 6379, Prod: 6380
+      - "${REDIS_PORT:-6379}:6379"
     volumes:
       - redis_data:/data
     healthcheck:
@@ -32,14 +34,16 @@ services:
       retries: 5
     networks:
       - lexigo-network
+    profiles:
+      - ${ENV:-dev}
 
   backend:
     build:
       context: ../..
       dockerfile: deploy/docker/backend/Dockerfile.${ENV:-dev}
-    container_name: lexigo-backend
     ports:
-      - "9090:8080"
+      # Dev: 9090, Prod: 9091
+      - "${BACKEND_PORT:-9090}:8080"
     env_file:
       - ../env/${ENV:-dev}/backend.env
     volumes:
@@ -60,9 +64,9 @@ services:
       dockerfile: deploy/docker/frontend/Dockerfile.${ENV:-dev}
       args:
         ENV: ${ENV:-dev}
-    container_name: lexigo-frontend
     ports:
-      - "5173:5173"
+      # Dev: 5173, Prod: 5174
+      - "${FRONTEND_PORT:-5173}:5173"
     env_file:
       - ../env/${ENV:-dev}/frontend.env
     volumes:
